--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -21,7 +21,9 @@ concurrency:
 jobs:
 
   get-version:
-    if: contains(github.event.pull_request.labels.*.name, 'build') && github.event.pull_request.base.ref == github.event.repository.default_branch
+    if: >
+      (github.event.action == 'labeled' && github.event.label.name == 'build' && github.event.pull_request.base.ref == github.event.repository.default_branch) ||
+      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'build') && github.event.pull_request.base.ref == github.event.repository.default_branch)
     name: Retrieve version
     runs-on: ubuntu-latest
   
@@ -35,7 +37,9 @@ jobs:
           echo "VERSION=$version" >> $GITHUB_OUTPUT
 
   build:
-    if: contains(github.event.pull_request.labels.*.name, 'build')  && github.event.pull_request.base.ref == github.event.repository.default_branch
+    if: >
+      (github.event.action == 'labeled' && github.event.label.name == 'build' && github.event.pull_request.base.ref == github.event.repository.default_branch) ||
+      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'build') && github.event.pull_request.base.ref == github.event.repository.default_branch)
     name: Build LCFS
     runs-on: ubuntu-latest
     needs: [get-version]
@@ -95,7 +99,9 @@ jobs:
           oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PR_NUMBER }} ${{ env.DEV_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PR_NUMBER }}
           
   deploy:
-    if: contains(github.event.pull_request.labels.*.name, 'build')  && github.event.pull_request.base.ref == github.event.repository.default_branch
+    if: >
+      (github.event.action == 'labeled' && github.event.label.name == 'build' && github.event.pull_request.base.ref == github.event.repository.default_branch) ||
+      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'build') && github.event.pull_request.base.ref == github.event.repository.default_branch)
     name: Deploy LCFS
     runs-on: ubuntu-latest
     timeout-minutes: 60
