--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   db:
-    container_name: postgres_db
+    container_name: db
     restart: 'no'
     image: postgres:14.2
     environment:
@@ -15,7 +15,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   redis:
-    container_name: redis_cache
+    container_name: redis
     restart: 'no'
     image: bitnami/redis:6.2.5
     environment:
@@ -26,7 +26,7 @@ services:
       - redis_data:/bitnami/redis/data
 
   backend:
-    container_name: lcfs_backend
+    container_name: backend
     restart: 'no'
     build:
       context: ./backend
@@ -56,7 +56,7 @@ services:
       - redis
 
   frontend:
-    container_name: lcfs_frontend
+    container_name: frontend
     restart: 'no'
     build:
       dockerfile: Dockerfile.dev
@@ -74,8 +74,8 @@ services:
 
 volumes:
   postgres_data:
-    name: postgres_data
+    name: lcfs_postgres_data
   redis_data:
-    name: redis_data
+    name: lcfs_redis_data
   node_modules:
-    name: node_modules
+    name: lcfs_node_data
