--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.2'
 
 services:
   db:
+    container_name: db
     restart: 'no'
     image: postgres:14.2
     environment:
@@ -14,6 +15,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   redis:
+    container_name: redis
     restart: 'no'
     image: bitnami/redis:6.2.5
     environment:
@@ -24,6 +26,7 @@ services:
       - redis_data:/bitnami/redis/data
 
   backend:
+    container_name: backend
     restart: 'no'
     build:
       context: ./backend
@@ -53,6 +56,7 @@ services:
       - redis
 
   frontend:
+    container_name: frontend
     restart: 'no'
     build:
       dockerfile: Dockerfile.dev
@@ -61,10 +65,17 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - type: bind
+        source: ./frontend
+        target: /app
+      - type: volume
+        source: node_modules
+        target: /app/node_modules
 
 volumes:
-  node_modules:
   postgres_data:
+    name: lcfs_postgres_data
   redis_data:
+    name: lcfs_redis_data
+  node_modules:
+    name: lcfs_node_data
