--- a/.github/workflows/test-ci.yaml
+++ b/.github/workflows/test-ci.yaml
@@ -1,5 +1,3 @@
-## For each release, the value of workflow name, branches and VERSION need to be adjusted accordingly
-
 name: LCFS 0.2.0 Test CI
 
 on:
@@ -16,16 +14,155 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  run-tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          repository: ${{ env.GIT_URL }}
+          ref: ${{ github.ref }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10.13"
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Cache Poetry dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install Poetry
+        run: pip install poetry==1.6.1
+
+      - name: Install backend dependencies
+        run: |
+          cd backend
+          poetry config virtualenvs.create false
+          poetry install
+          pip install pytest-github-actions-annotate-failures typing_extensions
+
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Fix docker-compose.yml
+        run: |
+          sed -i 's/: true/: "true"/g; s/: false/: "false"/g' docker-compose.yml
+
+      - name: Build and start services
+        run: |
+          docker-compose build
+          docker-compose up -d
+
+      - name: Run backend tests
+        id: backend_tests
+        continue-on-error: true
+        run: |
+          cd backend
+          poetry run pytest --junitxml=pytest-results.xml
+        env:
+          LCFS_DB_HOST: localhost
+          LCFS_DB_PORT: 5432
+          LCFS_DB_USER: lcfs
+          LCFS_DB_PASS: development_only
+          LCFS_DB_BASE: lcfs
+          LCFS_REDIS_HOST: localhost
+          LCFS_REDIS_PORT: 6379
+          LCFS_REDIS_PASSWORD: development_only
+          APP_ENVIRONMENT: dev
+
+      - name: Run frontend tests
+        id: frontend_tests
+        continue-on-error: true
+        run: |
+          cd frontend
+          npm run test:run -- --reporter=junit --outputFile=vitest-results.xml
+        env:
+          CI: true
+
+      - name: Create cypress.env.json
+        run: |
+          echo '{
+            "admin_idir_username": "${{ secrets.ADMIN_IDIR_USERNAME }}",
+            "admin_idir_password": "${{ secrets.ADMIN_IDIR_PASSWORD }}",
+            "org1_bceid_username": "${{ secrets.ORG1_BCEID_USERNAME }}",
+            "org1_bceid_password": "${{ secrets.ORG1_BCEID_PASSWORD }}",
+            "org1_bceid_id": "${{ secrets.ORG1_BCEID_ID }}",
+            "org1_bceid_userId": "${{ secrets.ORG1_BCEID_USERID }}",
+            "org2_bceid_username": "${{ secrets.ORG2_BCEID_USERNAME }}",
+            "org2_bceid_password": "${{ secrets.ORG2_BCEID_PASSWORD }}",
+            "org2_bceid_id": "${{ secrets.ORG2_BCEID_ID }}",
+            "org2_bceid_userId": "${{ secrets.ORG2_BCEID_USERID }}"
+          }' > frontend/cypress.env.json
+
+      - name: Run Cypress tests
+        id: cypress_tests
+        continue-on-error: true
+        uses: cypress-io/github-action@v6
+        with:
+          command: npm run cypress:run
+          wait-on: 'http://localhost:3000'
+          working-directory: frontend
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: |
+            backend/pytest-results.xml
+            frontend/vitest-results.xml
+            frontend/cypress/reports/
+            frontend/cypress/screenshots/
+
+      - name: Stop services
+        if: always()
+        run: docker-compose down
+
+      - name: Check test results
+        if: always()
+        run: |
+          if [ "${{ steps.backend_tests.outcome }}" == "failure" ] || \
+             [ "${{ steps.frontend_tests.outcome }}" == "failure" ] || \
+             [ "${{ steps.cypress_tests.outcome }}" == "failure" ]; then
+            echo "One or more tests failed"
+            exit 1
+          fi
 
   set-pre-release:
     name: Find Dev deployment pre-release number
+    needs: run-tests
     runs-on: ubuntu-latest
-  
+    
     outputs:
       output1: ${{ steps.set-pre-release.outputs.PRE_RELEASE }}
     
     steps:
-
       - name: Log in to Openshift
         uses: redhat-actions/oc-login@v1.3
         with:
@@ -76,17 +213,15 @@ jobs:
           fi
 
   deploy-on-test:
-
     name: Deploy LCFS on Test
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    needs: [ set-pre-release]
+    needs: [set-pre-release]
 
     env:
       PRE_RELEASE: ${{ needs.set-pre-release.outputs.output1 }}
 
     steps:
-
       - name: Ask for approval for LCFS release-${{ env.VERSION }} Test deployment
         uses: trstringer/manual-approval@v1.6.0
         with:
@@ -118,12 +253,12 @@ jobs:
       - name: Update frontend tag
         uses: mikefarah/yq@v4.40.5
         with:
-            cmd: yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PRE_RELEASE }}"' lcfs/charts/lcfs-frontend/values-test.yaml
+          cmd: yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PRE_RELEASE }}"' lcfs/charts/lcfs-frontend/values-test.yaml
 
       - name: Update backend tag
         uses: mikefarah/yq@v4.40.5
         with:
-            cmd: yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PRE_RELEASE }}"' lcfs/charts/lcfs-backend/values-test.yaml
+          cmd: yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PRE_RELEASE }}"' lcfs/charts/lcfs-backend/values-test.yaml
 
       - name: GitHub Commit & Push
         run: |
@@ -133,3 +268,4 @@ jobs:
           git add lcfs/charts/lcfs-backend/values-test.yaml
           git commit -m "Update the image tag to ${{ env.VERSION }}-${{ env.PRE_RELEASE }} on LCFS Test Environment"
           git push
+          
