--- a/backend/Dockerfile.openshift
+++ b/backend/Dockerfile.openshift
@@ -4,7 +4,7 @@ FROM artifacts.developer.gov.bc.ca/docker-remote/python:3.11-slim-bullseye as ba
 RUN apt-get update && apt-get install -y \
   gcc \
   build-essential \
-  ibpq-dev \
+  libpq-dev \
   && rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir --upgrade pip && \
