--- a/openshift/templates/frontend-bc.yaml
+++ b/openshift/templates/frontend-bc.yaml
@@ -59,16 +59,9 @@ objects:
     strategy:
       dockerStrategy:
         dockerfilePath: ./Dockerfile.openshift
-        env:
-          - name: ARTIFACTORY_USER
-            valueFrom:
-              secretKeyRef:
-                name: artifacts-default-gyszor
-                key: username
-          - name: ARTIFACTORY_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: artifacts-default-gyszor
-                key: password
+        pullSecret:
+          name: artifacts-pull-default-gyszor
+        forcePull: true
+        noCache: true    
       type: Docker
     triggers: []
