--- a/backend/Dockerfile.openshift
+++ b/backend/Dockerfile.openshift
@@ -18,7 +18,7 @@ COPY pyproject.toml poetry.lock /app/
 # Set PYTHONPATH to include the lcfs directory
 ENV PYTHONPATH="${PYTHONPATH}:/app/lcfs"
 
-ENV POETRY_CACHE_DIR=/.cache/pypoetry
+ENV POETRY_CACHE_DIR=.cache/pypoetry
 
 # Installing requirements
 RUN poetry install --only main
@@ -37,9 +37,11 @@ COPY . /app/
 
 # Update the group ownership and grant the read/write permission for /app
 RUN chgrp -R root /app && \
-    chmod -R g+rw /app && \
-    chgrp -R root /.cache && \
-    chmod -R g+rw /.cache
+    chmod -R g+rw /app 
+    
+    # && \
+    # chgrp -R root /.cache && \
+    # chmod -R g+rw /.cache
 # Make all startup scripts executable
 RUN chmod +x /app/wait-for-it.sh /app/lcfs/prestart.sh /app/lcfs/start.sh
 
